--- a/index.html
+++ b/index.html
@@ -4,21 +4,12 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"
             title>AluraBooks</title>
-            <link rel="stylesheet"  href=”styles.css”>
+            <link rel="stylesheet"  href="reset.css">
     </head>
     <body>
-        <body>
-            <h1>AluraBook</h1>
-        </body>
-    </html>
-    <body>
-        <header class="cabeçalho">
-            <span class="cabeçalho__menu-hamburguer"></span>
-            <img src="img/Logo.svg" alt="Logo da AluraBooks">
-        </header>
+        <h1>AluraBooks</h1>
     </body>
-    
-
+</html>
 
     
 
